--- a/app/build.gradle
+++ b/app/build.gradle
@@ -7,7 +7,7 @@ apply plugin: 'com.android.application'
 apply plugin:  'kotlin-android'
 apply plugin: 'kotlin-kapt'
 apply plugin: 'kotlin-parcelize'
-
+apply plugin: 'androidx.navigation.safeargs'
 android {
     compileSdk 31
 
@@ -58,6 +58,9 @@ dependencies {
 
     implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:2.2.0"
 
+    implementation "android.arch.navigation:navigation-fragment-ktx:1.0.0"
+    implementation "android.arch.navigation:navigation-ui-ktx:1.0.0"
+
     implementation 'com.jakewharton.retrofit:retrofit2-kotlin-coroutines-adapter:0.9.2'
 
 // Download and parse data
@@ -75,7 +78,7 @@ dependencies {
     implementation "androidx.recyclerview:recyclerview:1.2.1"
 
 // Image downloader
-    implementation 'com.squareup.picasso:picasso:2.5.2'
+    implementation 'com.squareup.picasso:picasso:2.71828'
 
 
     implementation("androidx.room:room-runtime:2.3.0")
